--- a/index.html
+++ b/index.html
@@ -14,26 +14,30 @@
         <div style="position: absolute; top: 25%;">
         <input type="text" id="codeEntry1" size="35" class="password">
         <br><br><br>
-        <div class="center">
-            <div id="code1box" style="float: left;" class="shape fade"></div>
-            <div id="code2box" style="float: left;" class="shape"></div>
-            <div id="code3box" style="float: left;" class="shape"></div>
-            <div id="code4box" style="float: left;" class="shape"></div>
-            <div id="code5box" style="float: left;" class="shape"></div>
-        </div>
-        <br><br><br>
-        <div id="button1" class="button" onmouseup="updateAnswers1()"></div>
+        <div id="code1box" style="float: left;" class="shape fade"></div>
+        <div class="hspacer">&nbsp;</div>
+		<div id="code2box" style="float: left;" class="shape"></div>
+        <div class="hspacer">&nbsp;</div>
+        <div id="code3box" style="float: left;" class="shape"></div>
+        <div class="hspacer">&nbsp;</div>
+        <div id="code4box" style="float: left;" class="shape"></div>
+        <div class="hspacer">&nbsp;</div>
+        <div id="code5box" style="float: left;" class="shape"></div>
+		<br><br><br>
+        <div id="button1" class="button" onmouseup="return updateAnswers1()"></div>
         <br>
-        <input type="text" id="codeEntry2" size="35" class="password">
+		<input type="text" id="codeEntry2" size="35" class="password">
         <br><br><br>
-        <div class="center">
-            <div id="code6box" style="float: left;" class="shape"></div>
-            <div id="code7box" style="float: left;" class="shape"></div>
-            <div id="code8box" style="float: left;" class="shape"></div>
-            <div id="code9box" style="float: left;" class="shape"></div>
-            <div id="code10box" style="float: left;" class="shape"></div>
-        </div>
-        <br><br><br>
+		<div id="code6box" style="float: left;" class="shape"></div>
+        <div class="hspacer">&nbsp;</div>
+		<div id="code7box" style="float: left;" class="shape"></div>
+        <div class="hspacer">&nbsp;</div>
+        <div id="code8box" style="float: left;" class="shape"></div>
+        <div class="hspacer">&nbsp;</div>
+        <div id="code9box" style="float: left;" class="shape"></div>
+        <div class="hspacer">&nbsp;</div>
+        <div id="code10box" style="float: left;" class="shape"></div>
+		<br><br><br>
         <div id="button2" class="button" onmouseup="updateAnswers2()"></div>
         </div>
     </body>
