--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <!-- Your first password: e0d9f-->
+	<title>Find the clues.</title>
     <head>
         <link rel="stylesheet" type="text/css" href="src/main.css">
         <script src="src/md5.js"></script>
