--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     </head>
     <body>
         <div class="float-left">
-            <button type="button" onmouseup="window.open('https://breakoutofihs.github.io/files/instructions.txt')">Instructions</button>
-            <button type="button" onmouseup="window.open('https://breakoutofihs.github.io/files/openInventorFirst.ipt')">Inventor Part</button>
+            <button class="button2" type="button" onmouseup="window.open('https://breakoutofihs.github.io/files/instructions.txt')">Instructions</button>
+            <button class="button2" type="button" onmouseup="window.open('https://breakoutofihs.github.io/files/openInventorFirst.ipt')">Inventor Part</button>
         </div>
         <div style="position: absolute; top: 25%;">
         <input type="text" id="codeEntry1" size="35" class="password">
