--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
         <script src="src/main.js"></script>
     </head>
     <body>
-        <div class="float-left">
-            <button class="button2" type="button" onmouseup="window.open('https://breakoutofihs.github.io/files/instructions.txt')">Instructions</button>
-            <button class="button2" type="button" onmouseup="window.open('https://breakoutofihs.github.io/files/openInventorFirst.ipt')">Inventor Part</button>
-        </div>
+        <div style="position: absolute; top: 15%;">
+			<div class="float-left">
+            	<button class="button2" type="button" onmouseup="window.open('https://breakoutofihs.github.io/files/instructions.txt')">Instructions</button>
+            	<button class="button2" type="button" onmouseup="window.open('https://breakoutofihs.github.io/files/openInventorFirst.ipt')">First clue (top)</button>
+        	</div>
+		</div>
         <div style="position: absolute; top: 25%;">
         <input type="text" id="codeEntry1" size="35" class="password">
         <br><br><br>
