--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div style="position: absolute; top: 10%;">
 			<div class="float-left">
             	<button class="button2" type="button" onmouseup="window.open('https://breakoutofihs.github.io/files/instructions.txt')">Instructions</button>
-            	<button class="button2" type="button" onmouseup="window.open('https://breakoutofihs.github.io/files/openInventorFirst.ipt')">First clue (top)</button>
+            	<button class="button2" type="button" onmouseup="window.open('https://breakoutofihs.github.io/files/openInventorFirst.ipt')">Starting clue</button>
         	</div>
 		</div>
         <div style="position: absolute; top: 25%;">
