--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <script src="src/main.js"></script>
     </head>
     <body>
-        <div style="position: absolute; top: 10%;">
+        <div style="position: absolute; top: 12.5%;">
 			<div class="float-left">
             	<button class="button2" type="button" onmouseup="window.open('https://breakoutofihs.github.io/files/instructions.txt')">Instructions</button>
-            	<button class="button2" type="button" onmouseup="window.open('https://breakoutofihs.github.io/files/openInventorFirst.ipt')">Starting clue</button>
+            	<button class="button2" type="button" onmouseup="window.open('https://breakoutofihs.github.io/files/openInventorFirst.ipt')">Clue</button>
         	</div>
 		</div>
         <div style="position: absolute; top: 25%;">
